# Rossmann-sales-prediction

./: .gitignore  README.md  handler.py  look_1.0-ear-store-sales-prediction-sell.ipynb  pyproject.toml  pyproject.toml.bak  requirements.txt
.ipynb_checkpoints/: look_1.0-ear-store-sales-prediction-sell-checkpoint.ipynb  store_sales_prediction-checkpoint.ipynb
api/: handler.py
api/rossmann/: Rossmann.py
notebooks/: look_1.0-ear-store-sales-prediction-sell.ipynb
notebooks/.ipynb_checkpoints/: look_1.0-ear-store-sales-prediction-sell-checkpoint.ipynb
rossmann/: Rossmann.py
rossmann_telegram_api/: requirements.txt  rossmann_bot.py
rossmann_telegram_api_local/: rossmann_bot.py
rossmann_telegram_api_production/: requirements.txt  rossmann_bot.py
webapp/: handler.py  requirements.txt
webapp/rossmann/: Rossmann.py
