[project]
name = "rossmann-sales-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo-95-DS",email = "edu.yori@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4"
dependencies = [
    "aiofiles (==0.8.0)",
    "aiosqlite (==0.17.0)",
    "anyio (==3.6.1)",
    "appnope (==0.1.0)",
    "argon2-cffi (==21.3.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "attrs (==19.3.0)",
    "babel (==2.10.1)",
    "backcall (==0.1.0)",
    "beautifulsoup4 (==4.11.1)",
    "bleach (==3.1.0)",
    "certifi (==2019.11.28)",
    "cffi (==1.15.0)",
    "chardet (==3.0.4)",
    "click (==8.1.3)",
    "cycler (==0.10.0)",
    "cython (==0.29.28)",
    "decorator (==4.4.1)",
    "defusedxml (==0.6.0)",
    "entrypoints (==0.3)",
    "fastjsonschema (==2.15.3)",
    "flask (==2.1.0)",
    "idna (==2.8)",
    "importlib-metadata (==4.11.4)",
    "importlib-resources (==5.7.1)",
    "inflection (==0.3.1)",
    "itsdangerous (==2.1.2)",
    "jedi (==0.15.1)",
    "jinja2 (==3.1.2)",
    "joblib (==0.14.1)",
    "json5 (==0.9.8)",
    "jsonschema (==3.1.1)",
    "kiwisolver (==1.1.0)",
    "lxml (==4.4.1)",
    "markupsafe (==2.1.1)",
    "matplotlib (==3.1.2)",
    "mistune (==0.8.4)",
    "more-itertools (==7.2.0)",
    "nbclient (==0.6.4)",
    "nbconvert (==6.5.0)",
    "nbformat (==5.4.0)",
    "nest-asyncio (==1.5.5)",
    "notebook (==6.4.8)",
    "notebook-shim (==0.1.0)",
    "numpy (==1.20.3)",
    "packaging (==21.3)",
    "pandas (==1.2.4)",
    "pandocfilters (==1.4.2)",
    "parso (==0.5.1)",
    "pexpect (==4.7.0)",
    "pickleshare (==0.7.5)",
    "prometheus-client (==0.7.1)",
    "prompt-toolkit (==2.0.10)",
    "ptyprocess (==0.6.0)",
    "pycparser (==2.21)",
    "pygments (==2.4.2)",
    "pyparsing (==2.4.5)",
    "pyrsistent (==0.15.5)",
    "python-dateutil (==2.8.2)",
    "pytz (==2019.3)",
    "pyyaml (==5.1.2)",
    "pyzmq (==23.1.0)",
    "requests (==2.22.0)",
    "send2trash (==1.8.0)",
    "six (==1.13.0)",
    "sklearn (==0.0)",
    "sniffio (==1.2.0)",
    "soupsieve (==2.3.2.post1)",
    "tabulate (==0.8.6)",
    "terminado (==0.13.3)",
    "testpath (==0.4.4)",
    "tinycss2 (==1.1.1)",
    "tornado (==6.1)",
    "traitlets (==5.2.2.post1)",
    "typing-extensions (==4.2.0)",
    "urllib3 (==1.25.7)",
    "wcwidth (==0.1.7)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.3.2)",
    "werkzeug (==2.1.2)",
    "widgetsnbextension (==3.5.1)",
    "y-py (==0.5.0)",
    "ypy-websocket (==0.1.12)",
    "zipp (==3.8.0)",
    "seaborn (==0.10.1)",
    "xgboost (==1.4.2)",
    "boruta (==0.3)",
    "catboost (==1.1.1)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
